noinst_LIBRARIES = libao-tools.a

AM_CFLAGS=$(WARN_CFLAGS) $(LIBUSB_CFLAGS) $(GNOME_CFLAGS)

libao_tools_a_SOURCES = \
	ccdbg-command.c \
	ccdbg-debug.c \
	ccdbg-debug.h \
	ccdbg-flash.c \
	ccdbg.h \
	ccdbg-hex.c \
	ccdbg-io.c \
	ccdbg-manual.c \
	ccdbg-memory.c \
	ccdbg-rom.c \
	ccdbg-state.c \
	cc-analyse.c \
	cc-convert.c \
	cc-log.c \
	cc-usb.c \
	cc-usb.h \
	cc.h \
	cc-usbdev.c \
	cc-util.c \
	cc-bitbang.c \
	cc-bitbang.h \
	cc-logfile.c \
	cc-telem.c \
	cp-usb-async.c \
	cp-usb-async.h
