noinst_LIBRARIES = libao-tools.a

AM_CFLAGS=$(WARN_CFLAGS) $(LIBUSB_CFLAGS) $(GNOME_CFLAGS)

libao_tools_a_uneeded = \
	cc-log.c

libao_tools_a_SOURCES = \
	ccdbg-command.c \
	ccdbg-debug.c \
	ccdbg-debug.h \
	ccdbg-flash.c \
	ccdbg.h \
	ccdbg-io.c \
	ccdbg-manual.c \
	ccdbg-memory.c \
	ccdbg-rom.c \
	ccdbg-state.c \
	cc-analyse.c \
	cc-convert.c \
	cc-dsp.c \
	cc-integrate.c \
	cc-mega.c \
	cc-period.c \
	cc-process.c \
	cc-usb.c \
	cc-usb.h \
	cc.h \
	cc-usbdev.c \
	cc-util.c \
	cc-bitbang.c \
	cc-bitbang.h \
	cc-logfile.c \
	cc-telem.c \
	cc-telemetry.c \
	cc-telemetry.h \
	cp-usb-async.c \
	cp-usb-async.h \
	i0.c \
	chbevl.c \
	mconf.h \
	cephes.h \
	ao-hex.c \
	ao-hex.h \
	ao-editaltos.c \
	ao-editaltos.h \
	ao-elf.c \
	ao-elf.h \
	ao-selfload.c \
	ao-selfload.h \
	ao-verbose.c \
	ao-verbose.h
